fixed various ui positioning issues + scrollbar

--- a/assets/scss/styles/components/Button.scss
+++ b/assets/scss/styles/components/Button.scss
@@ -30,7 +30,7 @@
     padding: space(24 - 1);
 
     border-radius: $border-radius-md;
-    border-width: space(1);
+    border-width: $border-width-thickness;
     width: auto;
     height: auto;
 
